--- a/dicee.html
+++ b/dicee.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Dicee</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="assets/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster" rel="stylesheet">
   </head>
   <body>
@@ -25,5 +25,5 @@
 
   </body>
 
-  <script src="index.js" charset="utf-8"></script>
+  <script src="assets/index.js" charset="utf-8"></script>
 </html>
